--- a/src/globals.css
+++ b/src/globals.css
@@ -126,4 +126,14 @@
     scrollbar-width: thin;
     scrollbar-color: hsl(var(--muted-foreground)) transparent;
   }
+
+  @keyframes flash-effect {
+    50% {
+      filter: brightness(2.5);
+    }
+  }
+
+  .is-flashing {
+    animation: flash-effect 200ms ease-out;
+  }
 }
